--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -1,114 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Median Income and COVID19 Death Rate</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-  <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-  <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
-  <!-- <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
+    <head>
+        <meta charset="utf-8" />
+        <title>People in Custody at Dept. of Correction Facilities: Detained or Sentenced</title>
 
-</head>
-<body>
-  <canvas id ="chart" width="800" height="400"></canvas>
-  <script>
-  //CHART JS
-  Chart.defaults.global.legend.display = false,
-  //  Chart.defaults.global.defaultFontFamily = 'open sans'
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+
+    </head>
+    <body>
 
 
-  chartIt();
+<canvas id="linechart23" width=auto max-height="400"></canvas>
+<script>
 
-  async function chartIt() {
-    const data = await getData();
-    const ctx = document.getElementById('chart').getContext('2d');
-    const myChart = new Chart(ctx, {
-      type: 'scatter',
-      data: {
-        labels: data.xs,
-        datasets: [{
-          label: 'Median Income',
-          data: [{
-            x: data.xs,
-            y: data.ys
-          }],
-          //fill: false,
-          //lineTension: 0.5,
-          //backgroundColor:"#222222",
-          //borderColor: "#222222",
-          //borderWidth: 3,
-          //borderCapStyle: 'butt',
-          //borderDash: [],
-          //borderDashOffset: 0.0,
-          //borderJoinStyle: 'miter',
-          //pointBorderColor: "#222222",
-          //pointBackgroundColor: "#222222",
-          //pointBorderWidth: 1,
-          //pointHoverRadius: 6,
-          //pointHoverBackgroundColor: "#E6E6E6",
-          //pointHoverBorderColor: "#E6E6E6",
-          //pointHoverBorderWidth: 2,
-          //pointRadius: 1,
-          //pointHitRadius: 4,
-          //hoverBackgroundColor: "#E6E6E6",
-          //hoverBorderColor: "#E6E6E6",
-          //pointHoverBorderWidth: 2,
-          //pointRadius: 1,
-          //pointHitRadius: 4,
-          //hoverBackgroundColor: "#E6E6E6",
-          //hoverBorderColor: "#E6E6E6",
-        }]
-      },
-      options: {
-        //    cornerRadius: 20,
-        scales: {
-          yAxes: [{
-            ticks: {
-              max: 300,
-              //min: 200000,
-              //stepSize: 200000,
-              callback: function(value, index, values) {
-                return '$' + value.toLocaleString('en-US')+'';
-              },
-              beginAtZero: true,
+Chart.defaults.global.responsive = true
+Chart.defaults.global.tooltips.backgroundColor="grey"
+Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.legend = false
+
+
+var ctx = document.getElementById("linechart23");
+
+var myChart = new Chart(ctx, {
+    type: 'line',
+    fill: false,
+    data: {
+        labels: [data.xs],
+        datasets: [
+            {
+              label: "Median Income",
+              data: data.xs
             },
-            gridLines: {
-              display: true
-            },
-            scaleLabel: {
-              display: true,
-              labelString: 'COVID19 Death Rate'
+            {
+              label: "COVID19 Death",
+              data: data.ys
             }
-          }],
-          xAxes: [{
-            ticks: {
-              callback: function(value, index, values) {
-                return value;
-              },
-              max: 200000,
-              fontStyle: 'strong'
-            },
-            gridLines: {
-              display: true
-            }
-          }]
+          ]
         },
-        tooltips: {
-          callbacks: {
-            label: function(tooltipItem, data) {
-              return '$'+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Average Revenue';
-            },
-          },
-          //  backgroundColor: '#434343',
-          //  borderColor: '#f5f5f5',
-          //  borderWidth: 1,
-          //          displayColors: false
+    options: {
+
+      tooltips: {
+        callbacks: {
+          label: function(tooltipItem, data) {
+            var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
+            return datasetLabel + ': '+'' +data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US') + ' People';
+          }
         }
+      },
+      scales: {
+        yAxes: [{
+          stacked: false,
+          scaleLabel:{
+            display: true,
+            labelString: 'People'
+          },
+          ticks: {
+            beginAtZero:false,
+            callback: function(value) {
+              return '' + value.toLocaleString('en-US');
+            }
+          }
+        }]
       }
-    });
-  }
+    }
+  });
   //SPLITTING AND BRINGING IN CSV DATA
   async function getData() {
     const xs = [];
@@ -120,16 +75,15 @@
     const table = data.split('\n').slice(1);
     table.forEach(row => {
       const columns = row.split(',');
-      const date = columns[4];
-      xs.push(date);
-      const revenue = columns[10];
-      ys.push(parseFloat(revenue)); //make data from string to number and added mean payers of 14 degrees
-      console.log(date, revenue);
+      const income = columns[4];
+      xs.push(income);
+      const covid_death = columns[10];
+      ys.push(parseFloat(covid_death)); //make data from string to number and added mean payers of 14 degrees
+      console.log(income, covid_death);
     });
     return { xs, ys };
   }
 
-
-  </script>
-</body>
+</script>
+    </body>
 </html>
