--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -4,48 +4,47 @@
   <meta charset="utf-8" />
   <title>People in Custody at Dept. of Correction Facilities: Detained or Sentenced</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
 
-  <canvas id="linechart23" width=auto max-height="400"></canvas>
+  <canvas id="myChart"></canvas>
   <script>
 
-  Chart.defaults.global.responsive = true
-  Chart.defaults.global.tooltips.backgroundColor="grey"
-  Chart.defaults.global.maintainAspectRatio = true
-  Chart.defaults.global.legend = false
+  //Chart.defaults.global.responsive = true
+  //Chart.defaults.global.tooltips.backgroundColor="grey"
+  //Chart.defaults.global.maintainAspectRatio = true
+  //Chart.defaults.global.legend = false
 
 
-  var ctx = document.getElementById("linechart23");
+var ctx = document.getElementById('myChart').getContext('2d');
 
-  var scatterChart = new Chart(ctx, {
-    type: 'scatter',
-    data: {
-        datasets: [{
-            label: 'Scatter Dataset',
-            data: [{
-                x: -10,
-                y: 0
-            }, {
-                x: 0,
-                y: 10
-            }, {
-                x: 10,
-                y: 5
-            }]
-        }]
-    },
-    options: {
-        scales: {
-            x: {
-                type: 'linear',
-                position: 'bottom'
-            }
-        }
-    }
+var scatterChart = new Chart(ctx, {
+  type: 'scatter',
+  data: {
+      datasets: [{
+          label: 'Scatter Dataset',
+          data: [{
+              x: -10,
+              y: 0
+          }, {
+              x: 0,
+              y: 10
+          }, {
+              x: 10,
+              y: 5
+          }]
+      }]
+  },
+  options: {
+      scales: {
+          x: {
+              type: 'linear',
+              position: 'bottom'
+          }
+      }
+  }
 });
 </script>
 </body>
