--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -60,8 +60,8 @@ async function getData() {
     //console.log(income, covid_death);
     const xsys = {x: parseFloat(income), y: parseFloat(covid_death)};
     xy.push(xsys);
-  //  console.log(xsys);
-  console.log(covid_death);
+  console.log(xsys);
+  //console.log(covid_death);
   });
   return { xs, ys };
   return {xy};
