--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -28,9 +28,8 @@
   data: {
       datasets: [{
           label: 'Scatter Dataset',
-          data: data.xy
+          data: xy
       }]
-      console.log(data.xy)
   },
   options: {
       scales: {
@@ -62,7 +61,7 @@ async function getData() {
     //console.log(income, covid_death);
     const xsys = {x: parseFloat(income), y: parseFloat(covid_death)};
     xy.push(xsys);
-//  console.log(xsys);
+    console.log(xy);
   //console.log(covid_death);
   });
   return { xs, ys };
