--- a/templates/bar33/index.html
+++ b/templates/bar33/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Average Salary for Employees in Civil Service Title Codes with More or Less Non-White Women</title>
+  <title>Average Salary for Employees in Civil Service Title Codes with More or Less Non-White Employees</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -50,7 +50,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'Proportion of Non-White Women'
+          text: 'Proportion of Non-White Employees'
         },
         scales: {
           xAxes: [{
@@ -66,7 +66,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Proportion of Non-White Women'
+              labelString: 'Proportion of Non-White Employees'
             }
           }],
           yAxes: [{
@@ -107,7 +107,7 @@
     const xs = [];
     const ys = [];
 
-    const response = await fetch('CSV_ Job Salaries by Proportion of Non-White Women Workers.csv');
+    const response = await fetch('CSV_ Job Salaries by Proportion of Non-White Workers.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
